# Align-AI-Yoga

./: .env.example  .gitignore  ARCHITECTURE.md  BACKEND_STRUCTURE.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_NEON_RENDER.md  DEPLOYMENT_READY.md  DEPLOY_RENDER.md  LICENSE  Makefile  Procfile  README.md  RENDER_SETUP.md  RENDER_TROUBLESHOOT.md  manage.py  pyproject.toml  render.sh  requirements.txt  run.py  test_flows.py  wsgi.py
BACK END/: rec.ipynb  temp_data.ipynb
FRONT END/: .env.example  app.py  conftest.py  deployment_check.py  run.py  test.py
FRONT END/dataset/: pose_guides.json
FRONT END/ml/: angle_calculator.py  annotator.py  evaluation_config.py  pose_corrector.py  pose_detector.py  recommender.py  reference_angles.py  types.py
FRONT END/templates/: about.html  analyze.html  chatbot.html  dashboard.html  home.html  index.html  login.html  register.html  yoga1.html  yoga2.html  yoga3.html
FRONT END/tests/: test_angle_calculator.py  test_pose_corrector.py  test_pose_evaluator.py  test_pose_guide_service.py
app/: __init__.py  config.py  extensions.py
app/models/: __init__.py
app/routes/: __init__.py  auth.py  dashboard.py  yoga.py
app/services/: __init__.py
app/templates/: base.html  index.html  login.html  register.html
backend/: final.ipynb
frontend/: run.py  test_mp.py  wsgi.py
frontend/app/: __init__.py  config.py
frontend/database/: schema.sql
frontend/dataset/: Recommendation_yoga_data.csv
frontend/ml/: __init__.py  angle_calculator.py  annotator.py  mediapipe_compat.py  pose_detector.py  pose_evaluator.py  (+2 more)
(+26 files in other folders)
