[tool.poetry]
name = "align-ai-yoga"
version = "1.0.0"
description = "AI-powered yoga pose correction and guidance"
authors = ["Align AI Yoga"]

[tool.poetry.dependencies]
python = "^3.11"
flask = ">=3.0"
python-dotenv = ">=1.0"
werkzeug = ">=3.0"
mysql-connector-python = ">=8.3"
mediapipe = ">=0.10.30"
opencv-python = ">=4.9"
numpy = ">=1.26"
pandas = ">=2.2"
scipy = ">=1.12"
scikit-learn = ">=1.4"
pillow = ">=10.2"
pytest = ">=8.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
